# Writ

./: .gitignore  CODEX_PROMPT.md  README.md  demo.py  eval_type_backport.py  normalize.py  package-lock.json  package.json  pyproject.toml  schemas.py  wire.py
agent/: __init__.py  ap_agent.py
api/: __init__.py  auth.py  ingest.py  tasks.py
connector/: __init__.py  ingest.py
connectors/: README.md  __init__.py  gmail.py  writ_api.py
docs/: README.md  week-1-reality-report.md  writ-mcp-spec.md
docs/archive/: README.md  claude-code-prompt.md
fixtures/: __init__.py  email_forwarded.eml  envelopes.py  generate_fixtures.py  vendor_change_form.json
fixtures/real/: README.md
gateway/: README.md  __init__.py  broker.py  evaluate.py  policy.py  policy.yaml  propose.py  registry.py  registry.yaml  store.py
harness/: __init__.py
harness/foreign_agent/: README.md  __init__.py  __main__.py  run.py
mcp/: __init__.py  server.py  session.py
mock/: __init__.py  erp.py
src/app/: globals.css  layout.tsx
src/app/control/: layout.tsx  loading.tsx  page.tsx
src/app/control/_components/: approval-review.tsx  brand-mark.tsx  control-shell.tsx  decision-workbench.tsx  demo-provider.tsx  overview-client.tsx
src/app/control/approvals/: page.tsx
src/app/control/decisions/[decisionId]/: page.tsx
src/app/control/policies/: page.tsx
src/lib/change-control/: demo.ts
tests/: test_integration.py  test_periphery.py  test_stateguard.py  test_week1_reality.py  test_writ_surface.py
