[project]
name = "stateguard"
version = "0.1.0"
description = "StateGuard — deterministic change-control gateway for agent-proposed mutations"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
