[project]
name = "writ"
version = "0.1.0"
description = "Writ — deterministic change-control gateway for agent-proposed mutations"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
writ-gmail = "connectors.gmail:main"
writ-foreign-agent = "harness.foreign_agent.run:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# Flat layout with several top-level packages (plus the Next.js src/), so
# auto-discovery cannot work; list what ships.
[tool.setuptools]
packages = [
    "gateway",
    "connector",
    "connectors",
    "agent",
    "mock",
    "fixtures",
    "api",
    "mcp",
    "harness",
    "harness.foreign_agent",
]
py-modules = ["schemas", "normalize", "wire"]

[tool.setuptools.package-data]
gateway = ["*.yaml"]
fixtures = ["*.eml", "*.json", "*.pdf", "real/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
